# github-user-activity

./: .gitignore  README.md  pyproject.toml  run.py
.github/workflows/: ci-cd.yml  release.yml  simple-ci.yml
github_activity/: __init__.py  __main__.py  api.py  cache.py  cli.py  formatter.py
scripts/: bump_version.py  hyperfine_benchmark.sh  release.sh  simple_benchmark.sh  start_redis_simple.sh
tests/: __init__.py  test_formatter.py
